position fixed on Mobile Menu

--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,7 @@ p {
     display: none;
     width: 100%;
     height: 100vh;
-    position: absolute;
+    position: fixed;
     top: 0;
     z-index: 1000;
     background-color: rgba(0, 0, 0, 0.8);;
